FIX: add 'overflow: scroll' to html so we always see the scrollbar, preventing it from flicking in and out of existence

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -8,6 +8,9 @@
     padding: 0;
     margin: 0;
 }
+html {
+    overflow: scroll;
+}
 html, body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
